queue-forward-queue now "works"
Not solved:
- Some problems with timeouts - fix this in another commit
- Notification from group to forward should only be done when the the
messages is committet, not before...

--- a/queue/makefile.cmk
+++ b/queue/makefile.cmk
@@ -181,7 +181,7 @@ forward_queue = LinkExecutable( 'bin/casual-queue-forward-queue',
     [
         Compile( 'source/forward/queue.cpp'),
     ],
-    [ forward_common, common, 'casual-common'])
+    [ forward_common, queue_api, common, 'casual-common'])
 
 install_bin.append( forward_service);
 install_bin.append( forward_queue);
