Cleaned up connect to broker
So we can use it easier for internal servers (that is not really xatmi
servers per se)

--- a/common/makefile.cmk
+++ b/common/makefile.cmk
@@ -36,6 +36,7 @@ install_libs = []
 casual_common_objectfiles = [
     Compile( 'source/server/context.cpp'),
     Compile( 'source/server/lifetime.cpp'),
+    Compile( 'source/server/handle.cpp'),
     Compile( 'source/call/context.cpp'),
     Compile( 'source/call/timeout.cpp'),
     Compile( 'source/buffer/x_octet.cpp'),
