first crack at admin-stuff
We use 'git style', ie.  casual-admin domain --list-servers

Where the first 'word' is a dispatch to an actual admin-executable

--- a/broker/makefile.cmk
+++ b/broker/makefile.cmk
@@ -85,8 +85,7 @@ target = LinkExecutable( 'bin/casual-broker-admin',
     ['casual-common', 'casual-sf', 'casual-xatmi'])
 	
 
-install_bins.append( target)
-
+Install( target,'$(CASUAL_HOME)/internal/bin')
 
 
 
