--- a/makefile.cmk
+++ b/makefile.cmk
@@ -3,24 +3,25 @@ from casual.make.directive import *
 
 Parallel( False)
 
-Build( "common/makefile.cmk")
-Build( "xatmi/makefile.cmk")
-Build( "buffer/makefile.cmk")
-Build( "serviceframework/makefile.cmk")
-Build( "configuration/makefile.cmk")
-Build( "tools/makefile.cmk")
+Build( 'common/makefile.cmk')
+Build( 'xatmi/makefile.cmk')
+Build( 'buffer/makefile.cmk')
+Build( 'serviceframework/makefile.cmk')
+Build( 'configuration/makefile.cmk')
+Build( 'tools/makefile.cmk')
 
 with Scope():
     Parallel( True)
         
-    Build( "broker/makefile.cmk")
-    Build( "monitor/makefile.cmk")
+    Build( 'broker/makefile.cmk')
+    Build( 'monitor/makefile.cmk')
+    Build( 'administration/makefile.cmk')
     
     with Scope():
         Parallel( False)
         
-        Build( "transaction/makefile.cmk")
+        Build( 'transaction/makefile.cmk')
         # queue depends on libcasual-resource-proxy-server.so in transaction
-        Build( "queue/makefile.cmk")
+        Build( 'queue/makefile.cmk')
 
-Build( "test/makefile.cmk")
+Build( 'test/makefile.cmk')
