administration fixed boot and shutdown
casual-admin domain --boot
- boots the domain

casual-admin domain --shutdown
- make all servers off-line then exit broker

Also:
casual-admin queue --groups
... and a few others...

--- a/common/makefile.cmk
+++ b/common/makefile.cmk
@@ -47,6 +47,7 @@ casual_common_objectfiles = [
     Compile( 'source/ipc.cpp'),
     Compile( 'source/message/type.cpp'),
     Compile( 'source/message/handle.cpp'),
+    Compile( 'source/message/dispatch.cpp'),
     
     Compile( 'source/uuid.cpp'),
     Compile( 'source/environment.cpp'),
