fix ipc::message::Transport size semantics
Hidden a few things so it's easier to reason about.

Also, made sand, receive as free functions -> cleaner + we can use them
in other context such as ngingx plugin or gateway. That is, to be able
to handle one real ipc-message at at time, if one wants.

--- a/common/makefile.cmk
+++ b/common/makefile.cmk
@@ -114,6 +114,8 @@ target_simple_process = LinkExecutable( 'bin/simple_process',
 # unittest
 #
 unittest_objectfiles = [
+   Compile( 'unittest/isolated/source/test_conformance.cpp'),                     
+                        
    Compile( 'unittest/isolated/source/test_buffer.cpp'),
    Compile( 'unittest/isolated/source/test_ipc.cpp'),
    Compile( 'unittest/isolated/source/test_marshal.cpp'),
