--- a/common/makefile.cmk
+++ b/common/makefile.cmk
@@ -61,6 +61,8 @@ casual_common_objectfiles = [
     Compile( 'source/process.cpp'),
     Compile( 'source/network_byteorder.cpp'),
     Compile( 'source/transcode.cpp'),
+    
+    Compile( 'source/terminal.cpp'),
 ]
 
 
