Some changes in settings

--- a/EXAMPLE_SETTINGS.env
+++ b/EXAMPLE_SETTINGS.env
@@ -1,24 +1,40 @@
 #
-# Use this EXAMPLE as a template for your own environment
+# CASUAL_TOOLS - location of tools
 #
-
-#
-# CASUAL_TOOLS
-#
-export CASUAL_TOOLS_HOME=/Users/xxx/git/tools
+export CASUAL_TOOLS_HOME=$HOME/git/tools
 export PATH=$PATH:$CASUAL_TOOLS_HOME/bin
-export PYTHONPATH=$CASUAL_TOOLS_HOME/casual_make
+export PYTHONPATH=$CASUAL_TOOLS_HOME
 
 #
-# CASUAL_HOME
+# CASUAL_BUILD_HOME - where to build
 #
-export CASUAL_HOME=/Users/xxx/usr/local
-export CASUAL_BUILD_HOME=/Users/xxx/git/casual
-export CASUAL_BUILD_ENVIRONMENT=$CASUAL_BUILD_HOME/casual.env 
+export CASUAL_BUILD_HOME=$HOME/git/casual
+export CASUAL_BUILD_ENVIRONMENT=$CASUAL_BUILD_HOME/casual_build_environment
+if [[ ! -e $CASUAL_BUILD_ENVIRONMENT ]]
+then
+	touch $CASUAL_BUILD_ENVIRONMENT
+fi
+#
+# CASUAL_HOME - where to install
+#
+export CASUAL_HOME=$HOME/usr/local
+
+#
+# Setting up PATH
+#
 export PATH=$PATH:$CASUAL_HOME/bin:$CASUAL_BUILD_HOME/tools/bin
 
 #
-# CASUAL_DOMAIN_HOME
+# Temporary needed for casual-build-server to work on linux
 #
-export CASUAL_DOMAIN_HOME=/Users/xxx/test/casual
- 
+export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$CASUAL_HOME/lib:$CASUAL_BUILD_HOME/configuration/bin:$CASUAL_BUILD_HOME/common/bin:$CASUAL_BUILD_HOME/serviceframework/bin:$CASUAL_BUILD_HOME/xatmi/bin
+
+#
+# CASUAL_DOMAIN_HOME - where to execute
+#
+export CASUAL_DOMAIN_HOME=$HOME/test/domain1
+
+#
+# Defines what will be logged.
+#
+export CASUAL_LOG=error,warning,debug,information
