--- a/common/makefile.cmk
+++ b/common/makefile.cmk
@@ -62,8 +62,7 @@ casual_common_objectfiles = [
     Compile( 'source/process.cpp'),
     Compile( 'source/network_byteorder.cpp'),
     Compile( 'source/transcode.cpp'),
-    
-    Compile( 'source/terminal.cpp'),
+   
 ]
 
 
@@ -72,6 +71,13 @@ common = LinkLibrary( 'bin/casual-common',
 	platform_specific_libs)
 
 install_libs.append( common)
+
+lib_terminal = LinkLibrary( 
+   'bin/casual-common-terminal', 
+   [ Compile( 'source/terminal.cpp'),], 
+   [ common])
+
+install_libs.append( lib_terminal)
 
 #
 # Mockup stuff, only for unittest
