tpcancel is implemented

--- a/xatmi/makefile.cmk
+++ b/xatmi/makefile.cmk
@@ -31,8 +31,9 @@ install_lib.append( lib_xatmi)
 LinkIsolatedUnittest( 'bin/test-casual-xatmi',
     [
        Compile( 'unittest/isolated/source/test_buffer.cpp'),
+       Compile( 'unittest/isolated/source/test_xatmi.cpp'),
     ],
-    [ lib_xatmi])
+    [ lib_xatmi, 'casual-mockup-unittest-environment'])
 
 #
 # Install
