--- a/buffer/makefile.cmk
+++ b/buffer/makefile.cmk
@@ -5,6 +5,7 @@ from casual.make.directive import *
 Include( '$(CASUAL_BUILD_ENVIRONMENT)')
 
 IncludePaths( [
+   '../serviceframework/include',
    '../common/include',
    '../xatmi/include',
    '$(UNITTEST_INCLUDE_PATH)',
@@ -12,6 +13,7 @@ IncludePaths( [
 
 
 LibraryPaths([
+    '../serviceframework/bin',
     '../common/bin',
     '../xatmi/bin',
     '$(JSON_LIBRARY_PATH)',
@@ -30,7 +32,7 @@ lib_buffer = LinkLibrary( 'bin/casual-buffer',
      Compile( 'source/field.cpp'),
     ],
     [
-     'casual-common',
+     'casual-common', 'casual-sf'
     ])
 
 install_lib.append( lib_buffer)
