xatmi - WIP correlate calls with transactions
Extended mockup-implementation that enables replies from a given
message. Much easier to unittest, and we can unittest from the xatmi-
and tx-api. Can probably be used to unittest other stuff more "real".

Some minor refactoring.

--- a/xatmi/makefile.cmk
+++ b/xatmi/makefile.cmk
@@ -33,7 +33,7 @@ LinkIsolatedUnittest( 'bin/test-casual-xatmi',
        Compile( 'unittest/isolated/source/test_buffer.cpp'),
        Compile( 'unittest/isolated/source/test_xatmi.cpp'),
     ],
-    [ lib_xatmi, 'casual-mockup-unittest-environment'])
+    [ lib_xatmi, 'casual-common', 'casual-mockup', 'casual-mockup-unittest-environment'])
 
 #
 # Install
