--- a/queue/makefile.cmk
+++ b/queue/makefile.cmk
@@ -175,13 +175,13 @@ forward_service = LinkExecutable( 'bin/casual-queue-forward-service',
     [
         Compile( 'source/forward/service.cpp'),
     ],
-    [ forward_common, common, 'casual-common'])
+    [ forward_common, common, 'casual-xatmi', 'casual-common'])
 
 forward_queue = LinkExecutable( 'bin/casual-queue-forward-queue',
     [
         Compile( 'source/forward/queue.cpp'),
     ],
-    [ forward_common, queue_api, common, 'casual-common'])
+    [ forward_common, queue_api, common, 'casual-xatmi', 'casual-common'])
 
 install_bin.append( forward_service);
 install_bin.append( forward_queue);
