Archive - cleaned up archive semantics
Changed the API so it's easier to implement different 'protocols'

Fixed so json can serialize binary, using common::transcode::base64

--- a/serviceframework/makefile.cmk
+++ b/serviceframework/makefile.cmk
@@ -26,6 +26,7 @@ lib_sf = LinkLibrary( 'bin/casual-sf',
     [
         Compile( 'source/archive/archive.cpp'),
         Compile( 'source/archive/maker.cpp'),
+        Compile( 'source/archive/json.cpp'),
         Compile( 'source/archive/log.cpp'),
         Compile( 'source/archive/terminal.cpp'),
         Compile( 'source/buffer.cpp'),
@@ -50,6 +51,7 @@ LinkIsolatedUnittest( 'bin/test-casual-sf',
 	[
         Compile( 'unittest/isolated/source/test_namevaluepair.cpp'),
         Compile( 'unittest/isolated/source/test_archive.cpp'),
+        Compile( 'unittest/isolated/source/test_archive_write_read.cpp'),
         Compile( 'unittest/isolated/source/test_traits.cpp'),
         Compile( 'unittest/isolated/source/test_yaml_archive.cpp'),
         Compile( 'unittest/isolated/source/test_json_archive.cpp'),
