--- a/serviceframework/makefile.cmk
+++ b/serviceframework/makefile.cmk
@@ -29,6 +29,8 @@ lib_sf = LinkLibrary( 'bin/casual-sf',
         Compile( 'source/archive/archive.cpp'),
         Compile( 'source/archive/maker.cpp'),
         Compile( 'source/archive/json.cpp'),
+        Compile( 'source/archive/xml.cpp'),
+        Compile( 'source/archive/yaml.cpp'),
         Compile( 'source/archive/log.cpp'),
         Compile( 'source/archive/terminal.cpp'),
         Compile( 'source/buffer.cpp'),
