Simplified third-party-dependencies
We now only use:
CASUAL_OPTIONAL_INCLUDE_PATHS
CASUAL_OPTIONAL_LIBRARY_PATHS

The user can have arbitrary paths.

Created ./example/ directory where I put:
- eclipse stuff as an example, not what one uses directly.
- EXAMPLE_SETTINGS.env, as example/env/casual.env

Fixed bug in sf/archive/terminal

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
 #
 # eclipse project
 #
-.settings/org.eclipse.cdt.codan.core.prefs
+.settings/
 .pydevproject
-.settings/org.eclipse.cdt.ui.prefs
-
+.cproject
 
 
 #
