--- a/broker/makefile.cmk
+++ b/broker/makefile.cmk
@@ -1,9 +1,6 @@
 from casual.make.directive import *
 
 
-Include( '$(CASUAL_BUILD_ENVIRONMENT)')
-
-
 IncludePaths( [
     'include',
     'admin/include',
@@ -11,8 +8,7 @@ IncludePaths( [
 	'../configuration/include',
 	'../xatmi/include',
 	'../serviceframework/include',
-	'$(UNITTEST_INCLUDE_PATH)',
-    '$(YAML_INCLUDE_PATH)' ])
+	'$(CASUAL_OPTIONAL_INCLUDE_PATHS)'])
 
 LibraryPaths( [
     '../common/bin',
@@ -20,8 +16,7 @@ LibraryPaths( [
 	'../xatmi/bin',
 	'../buffer/bin',
 	'../configuration/bin',
-	'$(YAML_LIBRARY_PATH)',
-	'$(JSON_LIBRARY_PATH)'])
+	'$(CASUAL_OPTIONAL_LIBRARY_PATHS)'])
 
 
 #
@@ -30,16 +25,6 @@ LibraryPaths( [
 
 
 install_bins = []
-
-#Compile( admin/source/servicevo.cpp, admin/obj/servicevo.o)
-#Compile( admin/source/servervo.cpp, admin/obj/servervo.o)
-
-#LinkLibrary( casual-broker-admin-vo,
-#    admin/obj/servicevo.o,
-#    admin/obj/servervo.o,
-#    ,\
-#    casual-sf ) 
-
 
 
 casual_broker_logic_objectfiles = [
