--- a/configuration/makefile.cmk
+++ b/configuration/makefile.cmk
@@ -1,14 +1,11 @@
 from casual.make.directive import *
 
-Include( '$(CASUAL_BUILD_ENVIRONMENT)')
-
 IncludePaths([
    'include',
    '../common/include',
    '../xatmi/include',
    '../serviceframework/include',
-   '$(JSON_INCLUDE_PATH)',
-   '$(UNITTEST_INCLUDE_PATH)',
+   '$(CASUAL_OPTIONAL_INCLUDE_PATHS)',
    ])
 
 
@@ -17,7 +14,7 @@ LibraryPaths([
     '../common/bin',
     '../xatmi/bin',
     '../serviceframework/bin',
-    '$(JSON_LIBRARY_PATH)',
+    '$(CASUAL_OPTIONAL_LIBRARY_PATHS)',
     ])
 
 intall_libs = []
