--- a/example/env/casual.env
+++ b/example/env/casual.env
@@ -5,15 +5,22 @@ export CASUAL_TOOLS_HOME=$HOME/git/tools
 export PATH=$PATH:$CASUAL_TOOLS_HOME/bin
 export PYTHONPATH=$CASUAL_TOOLS_HOME
 
+
+# 
+# Build 
 #
 # CASUAL_BUILD_HOME - where to build
-#
+# 
 export CASUAL_BUILD_HOME=$HOME/git/casual
-export CASUAL_BUILD_ENVIRONMENT=$CASUAL_BUILD_HOME/casual_build_environment
-if [[ ! -e $CASUAL_BUILD_ENVIRONMENT ]]
-then
-	touch $CASUAL_BUILD_ENVIRONMENT
-fi
+
+#
+# Optional paths. space separated list of paths
+# Can be used when third-party-libraries is installed outside standard paths
+#
+export CASUAL_OPTIONAL_INCLUDE_PATHS="$CASUAL_TOOLS_HOME/unittest/gtest/include "
+export CASUAL_OPTIONAL_LIBRARY_PATHS="$CASUAL_TOOLS_HOME/unittest/gtest/bin "
+
+
 #
 # CASUAL_HOME - where to install
 #
