--- a/tools/makefile.cmk
+++ b/tools/makefile.cmk
@@ -1,7 +1,4 @@
-
 from casual.make.directive import *
-
-Include( '$(CASUAL_BUILD_ENVIRONMENT)')
 
 
 IncludePaths( ['include',
@@ -9,8 +6,8 @@ IncludePaths( ['include',
     '../xatmi/include',
     '../configuration/include',
     '../serviceframework/include',
-    '$(YAML_INCLUDE_PATH)',
-    '$(UNITTEST_INCLUDE_PATH)'])
+    '$(CASUAL_OPTIONAL_INCLUDE_PATHS)',
+    ])
 
 LibraryPaths( ['bin',
     '../buffer/bin',
@@ -18,8 +15,8 @@ LibraryPaths( ['bin',
     '../xatmi/bin',
     '../configuration/bin',
     '../serviceframework/bin',
-    '$(YAML_LIBRARY_PATH)',
-    '$(JSON_LIBRARY_PATH)'])
+    '$(CASUAL_OPTIONAL_LIBRARY_PATHS)',
+    ])
 
 
 install_bin = []
