--- a/example/env/casual.env
+++ b/example/env/casual.env
@@ -17,6 +17,9 @@ export CASUAL_BUILD_HOME=$HOME/git/casual
 # Optional paths. space separated list of paths
 # Can be used when third-party-libraries is installed outside standard paths
 #
+# If you're building yaml, json, xml yourself and installed path is not a standard path, 
+# make sure they're present here.
+#
 export CASUAL_OPTIONAL_INCLUDE_PATHS="$CASUAL_TOOLS_HOME/unittest/gtest/include "
 export CASUAL_OPTIONAL_LIBRARY_PATHS="$CASUAL_TOOLS_HOME/unittest/gtest/bin "
 
