--- a/common/makefile.cmk
+++ b/common/makefile.cmk
@@ -37,9 +37,12 @@ casual_common_objectfiles = [
     Compile( 'source/buffer/x_octet.cpp'),
     Compile( 'source/buffer/pool.cpp'),
     Compile( 'source/buffer/transport.cpp'),
+    
     Compile( 'source/transaction/context.cpp'),
     Compile( 'source/transaction/id.cpp'),
     Compile( 'source/transaction/resource.cpp'),
+    Compile( 'source/transaction/transaction.cpp'),
+    
     Compile( 'source/ipc.cpp'),
     Compile( 'source/message/type.cpp'),
     Compile( 'source/message/handle.cpp'),
@@ -79,8 +82,8 @@ install_libs.append( lib_terminal)
 #
 mockup = LinkLibrary( 'bin/casual-mockup', 
      [
-       #Compile( 'source/mockup.cpp', 'obj/mockup.o'),
        Compile( 'source/mockup/ipc.cpp'),
+       Compile( 'source/mockup/domain.cpp'),
      ],
      [ common])
 
