--- a/common/makefile.cmk
+++ b/common/makefile.cmk
@@ -32,11 +32,14 @@ casual_common_objectfiles = [
     Compile( 'source/server/context.cpp'),
     Compile( 'source/server/lifetime.cpp'),
     Compile( 'source/server/handle.cpp'),
+    
     Compile( 'source/call/context.cpp'),
     Compile( 'source/call/timeout.cpp'),
+    
     Compile( 'source/buffer/x_octet.cpp'),
     Compile( 'source/buffer/pool.cpp'),
     Compile( 'source/buffer/transport.cpp'),
+    Compile( 'source/buffer/type.cpp'),
     
     Compile( 'source/transaction/context.cpp'),
     Compile( 'source/transaction/id.cpp'),
