Completed INI-archive (though it is still work-in-progress)

--- a/serviceframework/makefile.cmk
+++ b/serviceframework/makefile.cmk
@@ -24,6 +24,7 @@ lib_sf = LinkLibrary( 'bin/casual-sf',
         Compile( 'source/archive/json.cpp'),
         Compile( 'source/archive/xml.cpp'),
         Compile( 'source/archive/yaml.cpp'),
+        Compile( 'source/archive/ini.cpp'),
         Compile( 'source/archive/log.cpp'),
         Compile( 'source/archive/terminal.cpp'),
         Compile( 'source/buffer.cpp'),
@@ -53,6 +54,7 @@ LinkIsolatedUnittest( 'bin/test-casual-sf',
         Compile( 'unittest/isolated/source/test_yaml_archive.cpp'),
         Compile( 'unittest/isolated/source/test_json_archive.cpp'),
         Compile( 'unittest/isolated/source/test_xml_archive.cpp'),
+        Compile( 'unittest/isolated/source/test_ini_archive.cpp'),
         Compile( 'unittest/isolated/source/test_buffer.cpp'),
         Compile( 'unittest/isolated/source/test_service.cpp'),
         Compile( 'unittest/isolated/source/test_uuid.cpp'),
