--- a/tools/makefile.cmk
+++ b/tools/makefile.cmk
@@ -24,15 +24,18 @@ install_bin = []
 
 target = LinkExecutable( 'bin/casual-build-server',
    [ Compile( 'build_server/build_server.cpp')],
-   [ 'casual-common', 'casual-sf', 'casual-configuration'])
+   [ 'casual-common', 'casual-common-terminal', 'casual-sf', 'casual-configuration'])
 
 install_bin.append( target)
 
 target = LinkExecutable( 'bin/casual-build-resource-proxy',
    [ Compile( 'resource_proxy/build_resource_proxy.cpp')],
-   [ 'casual-common', 
+   [ 
+    'casual-common', 
+    'casual-common-terminal',
     'casual-sf', 
-    'casual-configuration'])
+    'casual-configuration',
+    ])
 
 install_bin.append( target)
 
