--- a/common/makefile.cmk
+++ b/common/makefile.cmk
@@ -51,6 +51,7 @@ casual_common_objectfiles = [
     Compile( 'source/message/handle.cpp'),
     Compile( 'source/message/dispatch.cpp'),
     
+    Compile( 'source/exception.cpp'),
     Compile( 'source/uuid.cpp'),
     Compile( 'source/environment.cpp'),
     Compile( 'source/file.cpp'),
@@ -147,6 +148,7 @@ unittest_objectfiles = [
    Compile( 'unittest/isolated/source/test_signal.cpp'),
    
    Compile( 'unittest/isolated/source/test_transaction_id.cpp'),
+   Compile( 'unittest/isolated/source/test_transaction.cpp'),
    Compile( 'unittest/isolated/source/test_algorithm.cpp'),
    
    Compile( 'unittest/isolated/source/test_mockup.cpp'),
