--- a/xatmi/makefile.cmk
+++ b/xatmi/makefile.cmk
@@ -33,6 +33,7 @@ LinkIsolatedUnittest( 'bin/test-casual-xatmi',
     [
        Compile( 'unittest/isolated/source/test_buffer.cpp'),
        Compile( 'unittest/isolated/source/test_xatmi.cpp'),
+       Compile( 'unittest/isolated/source/test_tx.cpp'),
     ],
     [ lib_xatmi, 'casual-common', 'casual-mockup', 'casual-mockup-unittest-environment'])
 
