Adjusted to casual-make LinkUnittest - depends on tools/develop/latest
Make sure you got the latest from tools.

--- a/broker/makefile.cmk
+++ b/broker/makefile.cmk
@@ -81,7 +81,7 @@ test_casual_broker_isolated = [
 ]
  
  
-LinkIsolatedUnittest( 'bin/test-casual-broker-isolated',
+LinkUnittest( 'bin/test-casual-broker-isolated',
    test_casual_broker_isolated,
     [
      logic_archive,
