--- a/queue/makefile.cmk
+++ b/queue/makefile.cmk
@@ -213,7 +213,7 @@ install_bin.append( resource_proxy);
 # Unittest
 #
 
-test_casual_queue = LinkIsolatedUnittest( 'unittest/bin/test-casual-queue', 
+test_casual_queue = LinkUnittest( 'unittest/bin/test-casual-queue', 
     [
      Compile( 'unittest/isolated/source/test_group_database.cpp'),
      Compile( 'unittest/isolated/source/test_transform.cpp'),
