Adding env for middleware tools

--- a/example/env/casual.env
+++ b/example/env/casual.env
@@ -12,6 +12,7 @@ export PYTHONPATH=$CASUAL_TOOLS_HOME
 # CASUAL_BUILD_HOME - where to build
 # 
 export CASUAL_BUILD_HOME=$HOME/git/casual
+export PYTHONPATH=$PYTHONPATH:$CASUAL_BUILD_HOME/tools
 
 #
 # Optional paths. space separated list of paths
