sf - service-describe-protocol WIP

--- a/serviceframework/makefile.cmk
+++ b/serviceframework/makefile.cmk
@@ -37,11 +37,12 @@ lib_sf = LinkLibrary( 'bin/casual-sf',
         Compile( 'source/archive/ini.cpp'),
         Compile( 'source/archive/log.cpp'),
         Compile( 'source/archive/terminal.cpp'),
+        Compile( 'source/archive/service.cpp'),
         Compile( 'source/buffer.cpp'),
         Compile( 'source/server.cpp'),
         Compile( 'source/proxy.cpp'),
-        Compile( 'source/service.cpp'),
-        Compile( 'source/service_protocol.cpp'),
+        Compile( 'source/service/interface.cpp'),
+        Compile( 'source/service/protocol.cpp'),
         Compile( 'source/xatmi_call.cpp'),
         Compile( 'source/platform.cpp'),
         
@@ -70,6 +71,7 @@ LinkUnittest( 'bin/test-casual-sf',
         Compile( 'unittest/isolated/source/test_uuid.cpp'),
         Compile( 'unittest/isolated/source/test_xatmi_call.cpp'),
         Compile( 'unittest/isolated/source/test_vo.cpp'),
+        Compile( 'unittest/isolated/source/test_service_archive.cpp'),
     ],
 	[ lib_sf, 'casual-xatmi', 'casual-common', 'json-c', 'yaml-cpp', 'pugixml'])
 
