--- a/configuration/makefile.cmk
+++ b/configuration/makefile.cmk
@@ -44,7 +44,7 @@ LinkUnittest( 'bin/test-casual-configuration',
         Compile( 'unittest/isolated/source/test_xa_switch.cpp'),
         Compile( 'unittest/isolated/source/test_queue.cpp'),
    ],
-   [ lib_configuration, 'casual-sf'])  
+   [ lib_configuration, 'casual-sf', 'casual-common'])  
    
 #
 # Install
