Fix statistics (monitor)

--- a/common/makefile.cmk
+++ b/common/makefile.cmk
@@ -51,6 +51,9 @@ casual_common_objectfiles = [
     Compile( 'source/message/type.cpp'),
     Compile( 'source/message/handle.cpp'),
     Compile( 'source/message/dispatch.cpp'),
+    Compile( 'source/message/server.cpp'),
+    Compile( 'source/message/monitor.cpp'),
+    
     
     Compile( 'source/exception.cpp'),
     Compile( 'source/uuid.cpp'),
