Admin - cleaned up environment-stuff in configuration
Not sure if it'll compile on OSX.

--- a/configuration/makefile.cmk
+++ b/configuration/makefile.cmk
@@ -23,6 +23,7 @@ intall_libs = []
 lib_configuration = LinkLibrary( 'bin/casual-configuration',
     [
         Compile( 'source/file.cpp'),
+        Compile( 'source/environment.cpp'),
         Compile( 'source/domain.cpp'),
         Compile( 'source/xa_switch.cpp'),
         Compile( 'source/serverdefinition.cpp'),
