--- a/test/makefile.cmk
+++ b/test/makefile.cmk
@@ -5,6 +5,7 @@ IncludePaths( ['include',
 	'../serviceframework/include',
 	'../xatmi/include',
 	'../queue/include',
+	'../buffer/include',
 	'$(CASUAL_OPTIONAL_INCLUDE_PATHS)',
     ])
 LibraryPaths( [ 'bin',
